Improve crafting plan calculation & fastutil-first collections
- Graph-based calculation stays graph-first; REPORT_MISSING_ITEMS no longer
  falls back to whole-tree legacy solving
- Legacy tree is now constructed lazily, only for CRAFT_LESS / legacy attempts;
  graph attempts stop creating CraftingTreeNode upfront
- SCC native solving restricted to provably-equivalent single-pattern
  self-loops; expanded net output is returned as-is (non-positive nets are no
  longer masked), so zero/negative-net cycles keep component-local legacy
  transactions instead of dead-code closed form
- Native seed cuts now record the recursive root and write real seeded
  requests; zero/negative seed shortfalls are explicitly recorded as missing
- Component-local seed shortfalls surface as terminal display leaves that
  claim the global missing budget
- Availability probes no longer pollute final boundary demand; reserve
  branches really consume boundaries and roll back inventory + calculation
  marker atomically
- mergeCalculationDelta uses max semantics for recursive missing seeds and
  reserve candidates; plain missing stays additive per request
- Graph node classification made explicit (Kind + local reason); invalid
  node states rejected
- Machine/provider groups, tooltips and locations are resolved lazily on
  first display materialization instead of during calculation
- Missing display budget is shared across graph/local branches per key
- fastutil-first collections for graph/SCC/plan/display: reference-key maps,
  primitive long maps, unmodifiable views replace Map.copyOf/List.copyOf
  where the caller owns the data; defensive copies kept only across
  ownership boundaries
- handlePausing added to demand propagation, graph execution branches and
  local component application
- Focused tests: stable topology order, node classification, missing budget
  sharing, seed-missing leaf claiming, diff atomic rollback, attempt metrics